--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="models/movableObject.class.js"></script>
+    <script src="models/character.class.js"></script>
+    <script src="models/orcs.class.js"></script>
+    <script src="models/wolrd.class.js"></script>
     <script src="js/game.js"></script>
     <title>Document</title>
   </head>
-  <body>
-    <canvas></canvas>
+  <body onload="init()">
+    <h1>Elf of the silver forest</h1>
+    <canvas id="canvas"></canvas>
   </body>
 </html>
