--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   </head>
   <body onload="init()">
     <h1>Elf of the silver forest</h1>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="720" height="480"></canvas>
   </body>
 </html>
