--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="models/movableObject.class.js"></script>
     <script src="models/character.class.js"></script>
     <script src="models/orcs.class.js"></script>
-    <script src="models/wolrd.class.js"></script>
+    <script src="models/world.class.js"></script>
     <script src="js/game.js"></script>
     <title>Document</title>
   </head>
