--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="models/character.class.js"></script>
     <script src="models/orcs.class.js"></script>
     <script src="models/world.class.js"></script>
+    <script src="models/forest.class.js"></script>
+    <script src="models/backgroundObject.class.js"></script>
     <script src="js/game.js"></script>
     <title>Document</title>
   </head>
