--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="models/world.class.js"></script>
     <script src="models/forest.class.js"></script>
     <script src="models/backgroundObject.class.js"></script>
+    <script src="models/keyboard.class.js"></script>
     <script src="js/game.js"></script>
     <title>Document</title>
   </head>
