--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <script src="models/backgroundObject.class.js"></script>
     <script src="models/keyboard.class.js"></script>
     <script src="models/level.class.js"></script>
+    <script src="models/endboss.js"></script>
     <script src="levels/level1.js"></script>
+
     <script src="js/game.js"></script>
     <title>Document</title>
   </head>
