--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="models/drawableObject.class.js"></script>
     <script src="models/movableObject.class.js"></script>
     <script src="models/character.class.js"></script>
     <script src="models/orcs.class.js"></script>
+    <script src="models/staturBar.class.js"></script>
     <script src="models/world.class.js"></script>
     <script src="models/forest.class.js"></script>
     <script src="models/backgroundObject.class.js"></script>
     <script src="models/keyboard.class.js"></script>
     <script src="models/level.class.js"></script>
     <script src="models/endboss.js"></script>
+
+    <script src="models/staturBar.class.js"></script>
     <script src="levels/level1.js"></script>
 
     <script src="js/game.js"></script>
