--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="models/movableObject.class.js"></script>
     <script src="models/character.class.js"></script>
     <script src="models/orcs.class.js"></script>
-    <script src="models/staturBar.class.js"></script>
+    <script src="models/statusBar.class.js"></script>
     <script src="models/world.class.js"></script>
     <script src="models/forest.class.js"></script>
     <script src="models/backgroundObject.class.js"></script>
@@ -17,11 +17,9 @@
     <script src="models/level.class.js"></script>
     <script src="models/endboss.js"></script>
 
-    <script src="models/staturBar.class.js"></script>
     <script src="levels/level1.js"></script>
-
     <script src="js/game.js"></script>
-    <title>Document</title>
+    <title>Elf of the silver forest</title>
   </head>
   <body onload="init()">
     <h1>Elf of the silver forest</h1>
