--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <script src="models/keyboard.class.js"></script>
     <script src="models/level.class.js"></script>
     <script src="models/endboss.js"></script>
-
     <script src="levels/level1.js"></script>
     <script src="js/game.js"></script>
+    <script src="models/fireball.class.js"></script>
+
     <title>Elf of the silver forest</title>
   </head>
   <body onload="init()">
