--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="models/fireball.class.js"></script>
     <script src="models/orcs.class.js"></script>
     <script src="models/statusBar.class.js"></script>
+    <script src="models/manaBar.class.js"></script>
     <script src="models/world.class.js"></script>
     <script src="models/forest.class.js"></script>
     <script src="models/backgroundObject.class.js"></script>
