--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <script src="models/orcs.class.js"></script>
     <script src="models/statusBar.class.js"></script>
     <script src="models/manaBar.class.js"></script>
+    <script src="models/collectibleObject.class.js"></script>
+    <script src="models/manaTank.class.js"></script>
     <script src="models/world.class.js"></script>
-    <script src="models/forest.class.js"></script>
     <script src="models/backgroundObject.class.js"></script>
     <script src="models/keyboard.class.js"></script>
     <script src="models/level.class.js"></script>
