--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script src="models/drawableObject.class.js"></script>
     <script src="models/movableObject.class.js"></script>
     <script src="models/character.class.js"></script>
+    <script src="models/throwableObject.class.js"></script>
     <script src="models/fireball.class.js"></script>
+    <script src="models/flash.class.js"></script>
     <script src="models/orcs.class.js"></script>
     <script src="models/statusBar.class.js"></script>
     <script src="models/manaBar.class.js"></script>
