--- a/index.html
+++ b/index.html
@@ -27,7 +27,32 @@
     <title>Elf of the silver forest</title>
   </head>
   <body onload="init()">
-    <h1>Elf of the silver forest</h1>
-    <canvas id="canvas" width="720" height="480"></canvas>
+    <div class="dNone" id="game">
+      <h1>Elf of the silver forest</h1>
+      <canvas id="canvas" width="720" height="480"></canvas>
+    </div>
+
+    <div class="startGameBg" id="gameStartBg">
+      <div class="logo">
+        <img src="img/Elves_of_the_silver_forest-removebg-preview.png" alt="" />
+      </div>
+      <div class="text">
+        <span
+          >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam
+          voluptas id quidem esse mollitia itaque rem. Commodi optio, aut,
+          obcaecati tenetur quas ipsa, cum sint officia quidem dolorum possimus
+          quo.</span
+        >
+      </div>
+      <div class="btnSection">
+        <button class="smallBtn">
+          <img src="img/sports_esports_FILL0_wght400_GRAD0_opsz48.png" alt="" />
+        </button>
+        <button onclick="gameStart()" class="bigBtn">Start Game</button>
+        <button class="smallBtn">
+          <img src="img/volume_off_FILL0_wght400_GRAD0_opsz48.png" alt="" />
+        </button>
+      </div>
+    </div>
   </body>
 </html>
