--- a/index.html
+++ b/index.html
@@ -45,6 +45,31 @@
       </div>
     </div>
 
+    <div class="mobileControllerLeft" id="mobileControllerLeft">
+      <div>
+        <button class="btnSmall" id="btnJump">
+          <img class="arrowUp" src="img/arrow-204-32.png" alt="" />
+        </button>
+      </div>
+      <div class="buttonContainer">
+        <button class="btnSmall" id="btnLeft">
+          <img class="arrowLeft" src="img/arrow-204-32.png" alt="" />
+        </button>
+        <button class="btnSmall" id="btnRight">
+          <img class="arrowRight" src="img/arrow-204-32.png" alt="" />
+        </button>
+      </div>
+    </div>
+
+    <div class="mobileControllerRight" id="mobileControllerRight">
+      <button class="btnSmall" id="btnFlash">
+        <img class="flashcastBtn" src="img/flash/flash07.png" alt="" />
+      </button>
+      <button class="btnSmall" id="btnFireball">
+        <img class="firecastBtn" src="img/Fireballs/11.png" alt="" />
+      </button>
+    </div>
+
     <div class="startGameBg" id="gameStartBg">
       <div class="text" id="description">
         <span
