--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
     <div class="startGameBg" id="gameStartBg">
       <div class="text" id="description">
         <span
-          >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam
-          voluptas id quidem esse mollitia itaque rem. Commodi optio, aut,
-          obcaecati tenetur quas ipsa, cum sint officia quidem dolorum possimus
-          quo.</span
+          >The people of the elves and humans are overrun by a huge force of
+          orcs, the last refuge for the elves and humans is the Silver Forest,
+          there they prepare for the great battle against the orcs. But the orcs
+          quickly pick up the scent and attack, a brave elf faces the
+          orcs...</span
         >
       </div>
       <div class="btnSection">
