--- a/index.html
+++ b/index.html
@@ -73,11 +73,10 @@
     <div class="startGameBg" id="gameStartBg">
       <div class="text" id="description">
         <span
-          >The people of the elves and humans are overrun by a huge force of
-          orcs, the last refuge for the elves and humans is the Silver Forest,
-          there they prepare for the great battle against the orcs. But the orcs
-          quickly pick up the scent and attack, a brave elf faces the
-          orcs...</span
+          >Elves and humans are overrun by a huge force of orcs, the last refuge
+          for the allied peoples is the Silver Forest, there they prepare for
+          the great battle against their foes. But the orcs quickly pick up the
+          scent and attack, a brave elf faces the opposing forces...</span
         >
       </div>
       <div class="btnSection">
